# TareasTEC

./: README.md
Arqui 2/T1b_JosafatVargasGamboa/: Makefile  README  main.c
Arqui 2/Taller 1a/: Makefile
Arqui 2/Taller 2/: Makefile  cpu_count  cpu_count.c  euler.c  euler_omp.c
Arqui 2/Taller 3/: Makefile  README
Arqui 2/Taller 4/: Android.mk  Application.mk  Makefile  README
Arqui 2/Taller 5/: README  devices.c  hello.c  matrixmul.c  matrixmul.cl  mm_serial.c  saxpy.c  saxpy.cl
Arqui 2/Taller 6/: README  machinefile  saxpy_mpi.c  sum_mpi.c
C Tests/: bin_user.c  c_matrix.c  concat.c  gpio_parse.c  mpi_prep.c  myThreads.c  random_gen.c  simpleParser.c  uint.c
C Tests/fileReader/: jvlogger  jvlogger.c
Embebidos/: .cache.mk  .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  .memory.ko.cmd  .memory.mod.cmd  .memory.mod.o.cmd  .memory.o.cmd  README  Rasp ethernet.txt  memory.c  memory.ko  memory.mod  memory.mod.c  modules.order
Embebidos/Taller10/lib/: CMakeLists.txt  libugpio.c
Embebidos/Taller9/: CMakeLists.txt  Makefile  README  crosscompile.cmake
Embebidos/Taller9/include/: libprand.h
Embebidos/Taller9/lib/: Makefile  libprand.c
Embebidos/Taller9/src/: Makefile  main.c
MCS Compiler/: DS3.md  MCS-Compiler.py  config_file_template.ini  converted_test.txt  converted_test2.txt  converted_test3.txt  fileManager.py  template_resource_file.txt  test.txt  test2.txt
Python Tests/: FunctionalProgramming.py  decorators.py  dictionaries.py  entrevista.py  fileManager.py  listComprehensions.py  pythonRGB.py  regex_tests.py  threads.py
Website/: index.html
(+125 files in other folders)
